--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="robots" content="noindex"/>
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
+    <title></title>
+
+     <!-- @{{ GoogleGlobalSiteTag }} -->
+
+    <!-- @{{ GoogleTagManagerHead }} -->
   </head>
   <body>
+    <!-- @{{ GoogleTagManagerBody }} -->
     
     <div id="app"></div>
     
