fix: url_landing

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           data(){
             return{
-              url_landing: this.url.toString(),
+              url_landing: location.origin + location.pathname,
               name: '-',
               surname: '-',
               offer: '-',
