chore: pixelCode in html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <!-- @{{ GoogleGlobalSiteTag }} -->
 
     <!-- @{{ GoogleTagManagerHead }} -->
+    <!-- @{{ pixelCode }} -->
   </head>
   <body>
     <!-- @{{ GoogleTagManagerBody }} -->
