--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
               //tracking
               gclid: this.url.searchParams.get('gclid'),
-              f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'sem' },
+              f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'dem' },
               f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
               f12: { value: this.url.searchParams.get('keyword') || '0' },
               f13: { value: this.url.searchParams.get('matchtype') || '0' },
