--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
               sap: { value: '{{ sap }}', default: '' },
               successURL: '{{ successURL }}',
+              collapseToggleText: '{{ collapseToggleText }}',
               account: { value: '{{ account }}', default: 'prezzogiusto' },
               logoAccount: { value: '{{ accountLogo }}', default: 'logo-prezzogiusto.svg' },
               logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo-prezzogiusto-small.png' },
@@ -70,8 +71,8 @@
           }
         },
         options: {},
-        landing.mapParamsToData(['gclid as idorigine', 'sap', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15']);
         afterInit(landing){
+          landing.mapParamsToData(['gclid as idorigine', 'sap', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15']);
           if(landing.params.get('useFo')){
             landing.scheduleBetween('21:00:00', '09:00:00', () => {
               landing.data.set('sap', landing.params.get('sap') + '_fo');
