fix: modifica massiva

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
               products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
               sap: { value: '{{ sap }}', default: '' },
               successURL: '{{ successURL }}',
+              collapseToggleText: '{{ collapseToggleText }}',
+              useRecaptcha: '{{ useRecaptcha }}',
               account: { value: '{{ account }}', default: 'prezzogiusto' },
               logoAccount: { value: '{{ accountLogo }}', default: 'logo-prezzogiusto.svg' },
               logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo-prezzogiusto-small.png' },
