--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
               sap: { value: '{{ sap }}', default: '' },
               successURL: '{{ successURL }}',
-              useRecaptcha: '{{ useRecaptcha }}',
+              useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value)},
               collapseToggleText: '{{ collapseToggleText }}',
               account: { value: '{{ account }}', default: 'prezzogiusto' },
               logoAccount: { value: '{{ accountLogo }}', default: 'logo-prezzogiusto.svg' },
