--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex"/>
     <meta name="theme-color" content="#ffffff">
     <link rel="icon" type="image/png" sizes="32x32" href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
-    <title></title>
+    <title>Offerte Tiscali</title>
 
      <!-- @{{ GoogleGlobalSiteTag }} -->
 
@@ -40,10 +40,7 @@
               copyFooter: `{{ copyFooter }}`,
 
               //privacy
-              "*privacy_1": `{{ privacy_1 }}`,
-              "&privacy_2": `{{ privacy_2 }}`,
-              "&privacy_3": `{{ privacy_3 }}`,
-              "&privacy_4": `{{ privacy_4 }}`,
+              "*privacy_1": { value: `{{ privacy_1 }}`, default: 'Letta l\'informativa sulla privacy ai sensi del D.lgs.196/03 e del Regolamento (UE) 679/2016 (GDPR) cliccando su "invia" dò il consenso al trattamento dei dati personali per essere ricontattato al fine di ottenere informazioni commerciali in merito al presente servizio di Tiscali.'},
 
               //tracking
               gclid: this.url.searchParams.get('gclid'),
@@ -52,16 +49,28 @@
               f12: { value: this.url.searchParams.get('keyword') || '0' },
               f13: { value: this.url.searchParams.get('matchtype') || '0' },
               f14: { value: this.url.searchParams.get('creative') || '0' },
-              f15: { value: this.url.searchParams.get('f15') || '{{ f15 }}', default: '0' }
+              f15: { value: this.url.searchParams.get('f15') || '{{ f15 }}', default: '0' },
+
+              retailerCode: { value: '{{ retailerCode }}', default: 'DM21057A00000' },
+              partnerName: { value: '{{ partnerName }}', default: 'smartcontact_pg' },
+              prod: { value: '{{ prod }}', default: 'Ultrainternet_fibra' },
+            
             }
           },
 
           data(){
             return{
-              url_landing: location.origin + location.pathname,
-              name: '-',
-              surname: '-',
-              offer: '-',
+              url_landing: this.url.toString(),
+              utm_source: this.url.searchParams.get('utm_source') || '0',
+              utm_medium: this.url.searchParams.get('utm_medium') || '0',
+              utm_campaign: this.url.searchParams.get('utm_campaign') || '0',
+              utm_content: this.url.searchParams.get('utm_content') || '0',
+              //utm_term: this.url.searchParams.get('utm_term') || '0',
+              privacy_1: 1,
+              buyer: 'Tiscali',
+              name: 'Tiscali',
+              category: this.params.get('f5'),
+              surname: this.params.get('f5'),
             }
           },
 
@@ -73,15 +82,24 @@
         },
         options: {},
         afterInit(landing){
-          landing.mapParamsToData(['gclid as idorigine', 'sap', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15']);
-          if(landing.params.get('useFo')){
-            landing.scheduleBetween('21:00:00', '09:00:00', () => {
-              landing.data.set('sap', landing.params.get('sap') + '_fo');
-              landing.params.set('useCtc', 0);
-            });
-          }
+          landing.mapParamsToData([
+            'sap',
+            'gclid as idorigine',
+            'f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18',
+            'retailerCode as retailer_code',
+            'partnerName as partner_name',
+            'f5 as distribution_code',
+            'prod'
+          ]);
 
-          setSuccessURLParams(landing);
+          const cookiesOptions = {
+            expires: 15,
+            // domain: '.verificalacopertura.it'
+          };
+          landing.cookies.set('session.Distribution', landing.params.get('f5'), cookiesOptions);
+          landing.cookies.set('session.PARTNER_NAME', landing.params.get('partnerName'), cookiesOptions);
+          landing.cookies.set('session.RetailerCode', landing.params.get('retailerCode'), cookiesOptions);
+          landing.cookies.set('sap', landing.params.get('sap'), cookiesOptions)
         }
       };
 
