--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex"/>
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://smart-contact-cdn.livelanding.it/font/gotham.css">
     <link rel="icon" type="image/png" sizes="32x32" href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
     <title>Offerte Tiscali</title>
 <!--
