--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
               //tracking
               gclid: this.url.searchParams.get('gclid'),
+              f4: { value: this.url.searchParams.get('f4') || '{{ f4 }}', default: '' },
               f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'dem' },
               f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
               f12: { value: this.url.searchParams.get('keyword') || '0' },
