--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex"/>
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://smart-contact-cdn.livelanding.it/images/favicon-iren.png">
     <title></title>
 
-     <!-- @{{ GoogleGlobalSiteTag }} -->
+      <!-- Global site tag (gtag.js) - Google Ads: 709687048 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-709687048"></script>
+      <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-709687048'); </script>
 
-    <!-- @{{ GoogleTagManagerHead }} -->
+      <!-- Google Tag Manager -->
+      <script>(function (w, d, s, l, i) {
+          w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+              new Date().getTime(), event: 'gtm.js'
+          }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+              'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-59PZ3VJ');</script>
+      <!-- End Google Tag Manager -->
   </head>
   <body>
-    <!-- @{{ GoogleTagManagerBody }} -->
+    <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59PZ3VJ" height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     
     <div id="app"></div>
     
@@ -27,7 +41,7 @@
               // collection: { value: '{{ collection }}', default: '' },
               products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
               sap: { value: '{{ sap }}', default: '' },
-              successURL: '{{ successURL }}',
+              successURL: location.origin + location.pathname + '/success',
               useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value)},
               collapseToggleText: '{{ collapseToggleText }}',
               account: { value: '{{ account }}', default: 'prezzogiusto' },
@@ -47,6 +61,7 @@
 
               //tracking
               gclid: this.url.searchParams.get('gclid'),
+              f4: { value: this.url.searchParams.get('f4') || '{{ f4 }}', default: 'iren' },
               f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'sem' },
               f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
               f12: { value: this.url.searchParams.get('keyword') || '0' },
@@ -63,18 +78,22 @@
               name: '-',
               surname: '-',
               offer: '-',
+              categoria_prodotto: '-',
+              prodotto_interesse: '-',
+              city: 'ND',
+              state: 'ND'
             }
           },
 
           injection: {
             sourceOptions:  {
-              id: '{{ smartBridgeSourceID }}'
+              id: 'c45a6870-c8cb-4d4a-9dc5-b30a56e0ba13'
             }
           }
         },
         options: {},
         afterInit(landing){
-          landing.mapParamsToData(['gclid as idorigine', 'sap', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18']);
+          landing.mapParamsToData(['gclid as idorigine', 'sap', 'f4','f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18']);
           if(landing.params.get('useFo')){
             landing.scheduleBetween('21:00:00', '09:00:00', () => {
               landing.data.set('sap', landing.params.get('sap') + '_fo');
