--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             f13: { value: this.url.searchParams.get('matchtype') || '0' },
             f14: { value: this.url.searchParams.get('creative') || '0' },
             f15: { value: this.url.searchParams.get('f15') || '{{ f15 }}', default: '0' },
-            f18: { value: this.url.searchParams.get('f18') || '{{ f18 }}', default: '0' }
-
+            f18: { value: this.url.searchParams.get('f18') || '{{ f18 }}', default: '0' },
             retailerCode: { value: '{{ retailerCode }}', default: 'DM21057A00000' },
             partnerName: { value: '{{ partnerName }}', default: 'smartcontact_pg' },
             prod: { value: '{{ prod }}', default: 'Ultrainternet_fibra' },
