--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             copyFooter: `{{ copyFooter }}`,
 
             //privacy
-            "copyPrivacy": { value: `{{ copyPrivacy }}`, default: `Letta l'informativa privacy ai sensi del D.lgs.196/03 e del Regolamento (UE) 679/2016 (GDPR) cliccando su "invia" do il consenso al trattamento dei dati personali per essere ricontattato al fine di ottenere informazioni commerciali in merito al presente servizio di Tiscali.` },
+            "copyPrivacy": { value: `{{ copyPrivacy }}`, default: `Letta <a target="_blank" href="https://casa.tiscali.it/comunicazioni/informativa_privacy.html">l'informativa privacy </a>ai sensi del D.lgs.196/03 e del Regolamento (UE) 679/2016 (GDPR) cliccando su "invia" do il consenso al trattamento dei dati personali per essere ricontattato al fine di ottenere informazioni commerciali in merito al presente servizio di Tiscali.` },
 
             //tracking
             gclid: this.url.searchParams.get('gclid'),
