chore: cambio loghi e proprietà

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             successURL: location.origin + location.pathname + '/success',
             useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
             collapseToggleText: '{{ collapseToggleText }}',
-            account: { value: '{{ account }}', default: 'iren' },
+            account: { value: '{{ account }}', default: 'iren mercato' },
             logoAccount: { value: '{{ accountLogo }}', default: 'old_iren-revolution-logo.png' },
             logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'old_iren-revolution-logo.png' },
 
