chore: cambiato nome logo

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
             collapseToggleText: '{{ collapseToggleText }}',
             account: { value: '{{ account }}', default: 'iren mercato' },
-            logoAccount: { value: '{{ accountLogo }}', default: 'old_iren-revolution-logo.png' },
-            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'old_iren-revolution-logo.png' },
+            logoAccount: { value: '{{ accountLogo }}', default: 'iren-mercato-logo.png' },
+            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'iren-mercato-logo.png' },
 
             //copy
             copyTitle: `{{ copyTitle }}`,
