chore: cambio loghi

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             successURL: '{{ successURL }}',
             useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
             collapseToggleText: '{{ collapseToggleText }}',
-            account: { value: '{{ account }}', default: 'prezzogiusto' },
-            logoAccount: { value: '{{ accountLogo }}', default: 'logo-prezzogiusto.svg' },
-            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo-prezzogiusto-small.png' },
+            account: { value: '{{ account }}', default: 'tiscali' },
+            logoAccount: { value: '{{ accountLogo }}', default: 'logo/logo-tiscali.png' },
+            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo/logo-tiscali.png' },
 
             //copy
             copyTitle: `{{ copyTitle }}`,
