--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
             products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
             sap: { value: '{{ sap }}', default: '' },
             successURL: location.origin + location.pathname + '/success',
-            useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
             collapseToggleText: '{{ collapseToggleText }}',
             account: { value: '{{ account }}', default: 'iren mercato' },
-            logoAccount: { value: '{{ accountLogo }}', default: 'iren-mercato-logo.png' },
-            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'iren-mercato-logo.png' },
+            logoAccount: { value: '{{ accountLogo }}', default: 'logo/iren-mercato-logo.png' },
+            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo/iren-mercato-logo.png' },
 
             //copy
             copyTitle: `{{ copyTitle }}`,
