chore: modifiche varie

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="https://smart-contact-cdn.livelanding.it/images/logo/iren-mercato-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" sizes="32x32"
-    href="https://smart-contact-cdn.livelanding.it/images/favicon-iren.png">
-  <title></title>
+    href="https://smart-contact-cdn.livelanding.it/images/logo/iren-mercato-logo.png">
+  <title>Offerte Iren</title>
 
   <!-- Global site tag (gtag.js) - Google Ads: 709687048 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-709687048"></script>
