--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="https://smart-contact-cdn.livelanding.it/images/logo/logo-tiscali-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://smart-contact-cdn.livelanding.it/font/gotham.css">
   <link rel="icon" type="image/png" sizes="32x32"
-    href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
+    href="https://smart-contact-cdn.livelanding.it/images/logo/logo-tiscali-small.png">
   <title>Offerte Tiscali</title>
   <!--
      
@@ -175,7 +175,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             partnerName: '{{ partnerName }}',
             prod: '{{ prod }}',
             device: window.innerWidth > 768 ? 'desktop' : 'mobile',
-            offer:'-'
+            offer: '-'
           }
         },
 
