--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             // collection: { value: '{{ collection }}', default: '' },
             products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
             sap: { value: '{{ sap }}', default: '' },
+            useFo: { value: '{{ useFo }}', default: '0', parser: value => !!Number(value) },
             successURL: location.origin + location.pathname + '/success',
             collapseToggleText: '{{ collapseToggleText }}',
             account: { value: '{{ account }}', default: 'iren mercato' },
@@ -96,6 +97,7 @@
       afterInit(landing) {
         landing.mapParamsToData(['gclid as idorigine', 'sap', 'f4', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18']);
         if (landing.params.get('useFo')) {
+          console.log('test')
           landing.scheduleBetween('21:00:00', '09:00:00', () => {
             landing.data.set('sap', landing.params.get('sap') + '_fo');
             landing.params.set('useCtc', 0);
