chore: nome icona

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="https://smart-contact-cdn.livelanding.it/images/logo/logo-tiscali-small.png" />
+  <link rel="icon" href="https://smart-contact-cdn.livelanding.it/images/logo/tiscali-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://smart-contact-cdn.livelanding.it/font/gotham.css">
   <link rel="icon" type="image/png" sizes="32x32"
-    href="https://smart-contact-cdn.livelanding.it/images/logo/logo-tiscali-small.png">
+    href="https://smart-contact-cdn.livelanding.it/images/logo/tiscali-small.png">
   <title>Offerte Tiscali</title>
   <!--
      
@@ -135,8 +135,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
             collapseToggleText: '{{ collapseToggleText }}',
             account: { value: '{{ account }}', default: 'tiscali' },
-            logoAccount: { value: '{{ accountLogo }}', default: 'logo/logo-tiscali.png' },
-            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo/logo-tiscali.png' },
+            logoAccount: { value: '{{ accountLogo }}', default: 'logo/tiscali.png' },
+            logoAccountMobile: { value: '{{ accountLogoMobile }}', default: 'logo/tiscali.png' },
 
             //copy
             copyTitle: `{{ copyTitle }}`,
