--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         ]);
 
         const cookiesOptions = {
-          expires: 15, ì
+          expires: 15,
         };
         landing.cookies.set('session.Distribution', landing.params.get('f5'), cookiesOptions);
         landing.cookies.set('session.PARTNER_NAME', landing.params.get('partnerName'), cookiesOptions);
