--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="https://smart-contact-cdn.livelanding.it/images/logo/tiscali-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#5f57a1">
   <link rel="stylesheet" href="https://smart-contact-cdn.livelanding.it/font/gotham.css">
   <link rel="icon" type="image/png" sizes="32x32"
     href="https://smart-contact-cdn.livelanding.it/images/logo/tiscali-small.png">
