--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             copyFooter: `{{ copyFooter }}`,
 
             //privacy
-            "*privacy_1": { value: `{{ privacy_1 }}`, default: "Ho preso visione dell’informativa sul trattamento dei dati personali ai sensi degli artt. 13-14 del Reg. UE 2016/679" },
+            "*privacy_1": { value: `{{ privacy_1 }}`, default: "Ho preso visione <a href='https://offerte.irenlucegas.it/cdn/IME_Informativa_landing_page.pdf' target='_blank'>dell'informativa sul trattamento</a> dei dati personali ai sensi degli artt. 13-14 del Reg. UE 2016/679" },
             "&privacy_2": { value: `{{ privacy_2 }}`, default: "Presto il consenso al trattamento dei dati personali per finalità di marketing diretto" },
 
 
