feat: added usefo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             // collection: { value: '{{ collection }}', default: '' },
             products: { value: '{{ products }}', parser: value => JSON.parse('[' + value + ']') },
             sap: '{{ sap }}',
+            useFo: { value: '{{ useFo }}', default: '0', parser: value => !!Number(value) },
             successURL: '{{ successURL }}',
             collapseToggleText: '{{ collapseToggleText }}',
             useRecaptcha: { value: '{{ useRecaptcha }}', default: "0", parser: value => !!Number(value) },
