--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <!-- @{{ GoogleGlobalSiteTag }} -->
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
+  <!-- @{{{ privacyModalScript }} -->
+  <!-- @{{{ cookiebotScript }} -->
 </head>
 
 <body>
@@ -117,6 +119,7 @@
   </script>
 
   <script type="module" src="/src/main.js"></script>
+  <!-- @{{{ privacyModalElement }} -->
 </body>
 
 </html>
