--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
   <!-- @{{ pixelCode }} -->
+  <!-- @{{{ privacyModalScript }} -->
+  <!-- @{{{ cookiebotScript }} -->
 </head>
 
 <body>
@@ -147,6 +149,7 @@
   </script>
 
   <script type="module" src="/src/main.js"></script>
+  <!-- @{{{ privacyModalElement }} -->
 </body>
 
 </html>
