--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
   <!-- @{{ pixelCode }} -->
-  <!-- @{{{ privacyModalScript }} -->
-  <!-- @{{{ cookiebotScript }} -->
+  <!-- @{{ privacyModalScript }} -->
+  <!-- @{{ cookiebotScript }} -->
 </head>
 
 <body>
@@ -149,7 +149,7 @@
   </script>
 
   <script type="module" src="/src/main.js"></script>
-  <!-- @{{{ privacyModalElement }} -->
+  <!-- @{{ privacyModalElement }} -->
 </body>
 
 </html>
