--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!-- @{{ GoogleGlobalSiteTag }} -->
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
-  <!-- @{{{ privacyModalScript }} -->
-  <!-- @{{{ cookiebotScript }} -->
+  <!-- @{{ privacyModalScript }} -->
+  <!-- @{{ cookiebotScript }} -->
 </head>
 
 <body>
@@ -119,7 +119,7 @@
   </script>
 
   <script type="module" src="/src/main.js"></script>
-  <!-- @{{{ privacyModalElement }} -->
+  <!-- @{{ privacyModalElement }} -->
 </body>
 
 </html>
