--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
             //tracking
-            gclid: this.url.searchParams.get('gclid'),
+            gclid: this.url.searchParams.get('gclid') || '-',
             f4: { value: this.url.searchParams.get('f4') || '{{ f4 }}', default: 'iren' },
             f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'sem' },
             f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
