--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
             url_landing: location.origin + location.pathname,
             name: '-',
             surname: '-',
-            offer: '-',
+            supplier: '{{ supplier }}' || '-',
+            campaign_needcheck: true,
+            campaign: '{{ campaign }}' || '-',
+            channel: '{{ channel }}' || '-',
+            fornitore: '{{ fornitore }}' || '-',
+            origin: '{{ origin }}' || '-',
+            registration_date: new Date().toLocaleString('en-ZA').replace(',', ''),
+            p1: `{{ p1 }}`
           }
         },
 
