fix: cambiato testo footer e parametro privacy da PARAMS, spostato inject (APP) dentro setup e tolto this a $bvModal, cambiato valore di privacy_1 su INDEX

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             copyFooter: `{{ copyFooter }}`,
 
             //privacy
-            "*privacy_1": `{{ privacy_1 }}`,
+            "*privacy_1": `{{ p1 }}`,
 
             //tracking
             gclid: this.url.searchParams.get('gclid'),
