feat: tolto recaptcha

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/png" sizes="32x32"
     href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
   <title>{{ pageTitle }}</title>
+  <style>
+    .grecaptcha-badge {
+      display: none;
+    }
+  </style>
 
   <!-- @{{ GoogleGlobalSiteTag }} -->
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
