--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     href="https://smart-contact-cdn.livelanding.it/images/favicon-{{ account }}.png">
   <title></title>
 
+  <style>
+    .grecaptcha-badge {
+      display: none;
+    }
+  </style>
+
   <!-- @{{ GoogleGlobalSiteTag }} -->
   <!-- @{{ GoogleAdsDataLayerPageView }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
