feat: aggiunto tag script clarity

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- @{{ GoogleGlobalSiteTag }} -->
   <!-- @{{ GoogleTagManagerHead }} -->
+  <!-- @{{ ClarityScript }} -->
 </head>
 
 <body>
