--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
             //tracking
             gclid: { value: this.url.searchParams.get('gclid') || '-', default: '-' },
+            f4: { value: this.url.searchParams.get('f4') || '{{ f4 }}', default: '-' },
             f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'sem' },
             f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
             f12: { value: this.url.searchParams.get('keyword') || '0' },
@@ -89,7 +90,7 @@
       },
       options: {},
       afterInit(landing) {
-        landing.mapParamsToData(['gclid as idorigine', 'sap', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18']);
+        landing.mapParamsToData(['gclid as idorigine', 'sap','f4', 'f5', 'f11', 'f12', 'f13', 'f14', 'f15', 'f18']);
         if (landing.params.get('useFo')) {
           landing.scheduleBetween('21:00:00', '09:00:00', () => {
             landing.data.set('sap', landing.params.get('sap') + '_fo');
@@ -109,6 +110,7 @@
         //inserire qui la mappatura dei parametri della landing sull'url
         const paramsMap = {
           prov: landing.params.get('f5'),
+          f4: landing.params.get('f4'),
           f11: landing.params.get('f11'),
           f12: landing.params.get('f12'),
           f13: landing.params.get('f13'),
