--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             //tracking
             gclid: { value: this.url.searchParams.get('gclid') || '-', default: '-' },
             f4: { value: this.url.searchParams.get('f4') || '{{ f4 }}', default: '-' },
-            f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: 'sem' },
+            f5: { value: this.url.searchParams.get('f5') || '{{ f5 }}', default: '-' },
             f11: { value: this.url.searchParams.get('f11') || '{{ f11 }}', default: '0' },
             f12: { value: this.url.searchParams.get('keyword') || '0' },
             f13: { value: this.url.searchParams.get('matchtype') || '0' },
