--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             const transaction_id = Date.now().toString();
             landing.params.set('f11', landing.url.searchParams.get('aff_id') || '-');
             break;
+          case "digilab":
+            landing.params.set(
+              "f12",
+              landing.url.searchParams.get("click_id") || "-"
+            );
+            break;
           case 'vertigo':
             landing.params.set('f12', landing.url.searchParams.get('utm_source') || '-');
             break;
