--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
             //privacy
             "*privacy_1": `{{ privacy_1 }}`,
+            "&privacy_2": `{{ privacy_2 }}`,
+            "&privacy_3": `{{ privacy_3 }}`,
+            "&privacy_4": `{{ privacy_4 }}`,
 
             //tracking
             gclid: this.url.searchParams.get('gclid'),
