--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             // collection: { value: '{{ collection }}', default: '' },
             products: { value: '{{ products }}', default: '1,3', parser: value => JSON.parse('[' + value + ']') },
             sap: { value: '{{ sap }}', default: '' },
+            token_in: { value: '{{ token_in }}', default: '' },
             useFo: { value: '{{ useFo }}', default: '0', parser: value => !!Number(value) },
             useHeaderScroll: { value: '{{ useHeaderScroll }}', default: '1', parser: value => !!Number(value) },
             successURL: '{{ successURL }}',
@@ -68,6 +69,7 @@
             surname: '-',
             offer: '-',
             supplier_name: '-',
+            token_in: '{{ token_in }}',
 
           }
         },
